@@ -1,94 +1,104 @@
 package turbo.funicular.service;
 
-import io.vavr.collection.Stream;
+import dev.mrpato.failure.entity.Failure;
+import io.vavr.CheckedFunction0;
+import io.vavr.Tuple;
+import io.vavr.Tuple2;
 import io.vavr.control.Either;
 import io.vavr.control.Try;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.egit.github.core.Comment;
-import org.eclipse.egit.github.core.client.GitHubClient;
-import org.eclipse.egit.github.core.service.GistService;
-import org.eclipse.egit.github.core.service.UserService;
+import org.eclipse.egit.github.core.Gist;
 import turbo.funicular.entity.User;
 import turbo.funicular.web.GistComment;
 import turbo.funicular.web.GistDto;
 
-import java.util.Comparator;
+import javax.inject.Singleton;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 import static turbo.funicular.service.GistMapper.GIST_MAPPER;
 import static turbo.funicular.service.UsersMapper.USERS_MAPPER;
 
 @Slf4j
-public class GithubApiClient {
+@Singleton
+@RequiredArgsConstructor
+public class GithubApiClient implements GithubService {
 
-    private final UserService userService;
-    private final GistService gistService;
+    private static final String PREFIX_FAILURE_CODE = "github.api.failure.%s";
+    private final GithubClientFactory githubClientFactory;
 
-    public static GithubApiClient create() {
-        final var githubClient = new GitHubClient();
-        final var userService = new UserService(githubClient);
-        final var gistService = new GistService(githubClient);
-        return new GithubApiClient(userService, gistService);
+    @Override
+    public Either<Failure, User> findUserByLogin(final String login) {
+        return githubClientFactory.createUserService()
+            .flatMap(userService -> {
+                final CheckedFunction0<org.eclipse.egit.github.core.User> getUser =
+                    () -> userService.getUser(login);
+                return executeRequest(getUser, USERS_MAPPER::githubToEntity,
+                    Tuple.of("get-user", "Error in getting the user %s from Github".formatted(login)));
+            });
     }
 
-    public static GithubApiClient create(final String accessToken) {
-        final var githubClient = new GitHubClient().setOAuth2Token(accessToken);
-        final var userService = new UserService(githubClient);
-        final var gistService = new GistService(githubClient);
-        return new GithubApiClient(userService, gistService);
+    @Override
+    public Either<Failure, List<GistDto>> findGistsByUser(final String login) {
+        return githubClientFactory.createGistService()
+            .flatMap(gistService -> {
+                final CheckedFunction0<List<Gist>> gistsByUser = () -> gistService.getGists(login);
+                return executeRequestForList(gistsByUser, GIST_MAPPER::githubToGistDto,
+                    Tuple.of("find-gists-by-user", "Can not get the gists for %s".formatted(login)));
+            });
     }
 
-    protected GithubApiClient(final UserService userService, final GistService gistService) {
-        this.userService = userService;
-        this.gistService = gistService;
+    @Override
+    public Either<Failure, GistDto> findGistById(final String ghId) {
+        return githubClientFactory.createGistService()
+            .flatMap(gistService -> {
+                final CheckedFunction0<Gist> getGist = () -> gistService.getGist(ghId);
+                return executeRequest(getGist, GIST_MAPPER::githubToGistDto,
+                    Tuple.of("find-gist-by-id", "Can not get the gist with id %s".formatted(ghId)));
+            });
     }
 
-    public Optional<User> findUser(final String login) {
-        //For now, in fact could be Either<List<String>, User> to keep track of all the possible errors
-        return Try.ofCallable(() -> userService.getUser(login))
-            .map(USERS_MAPPER::githubToEntity)
-            .onFailure(throwable -> log.error("Error in getting the user {} from Github", login, throwable))
-            .toJavaOptional();
+    @Override
+    public Either<Failure, List<GistComment>> topGistComments(final String gistId, final int count) {
+        return githubClientFactory.createGistService()
+            .flatMap(gistService -> {
+                final CheckedFunction0<List<Comment>> getGistComments = () -> gistService.getComments(gistId);
+                return executeRequestForList(getGistComments,
+                    comments -> GIST_MAPPER.takeCommentsAndMap(comments, count),
+                    Tuple.of("top-gists-comments", "Can not get the comments from %s gist".formatted(gistId)));
+            });
     }
 
-    public Either<List<String>, List<GistDto>> findGistsByUser(final String login) {
-        return Try.of(() -> gistService.getGists(login))
-            .map(gists -> Stream.ofAll(gists).map(GIST_MAPPER::githubToGistDto).toJavaList())
-            .onFailure(throwable -> log.error("Can not find gists for user {}", login, throwable))
-            .toEither(List.of(String.format("Can not get the gists for %s", login)));
+    @Override
+    public Either<Failure, GistComment> addCommentToGist(final String gistId, final String comment) {
+        return githubClientFactory.createGistService()
+            .flatMap(gistService -> {
+                final CheckedFunction0<Comment> createGist = () -> gistService.createComment(gistId, comment);
+                return executeRequest(createGist, GIST_MAPPER::githubToGistComment,
+                    Tuple.of("add-gist-comment",
+                        "Can not create a new comment for gist %s".formatted(gistId)));
+            });
     }
 
-    public Either<List<String>, GistDto> findGistById(final String ghId) {
-        return Try.ofCallable(() -> gistService.getGist(ghId))
-            .onFailure(throwable -> log.error("Can not get gist {} from GH", ghId, throwable))
-            .map(GIST_MAPPER::githubToGistDto)
-            .toEither(List.of(String.format("Can not get the gist with id %s", ghId)));
+    private <T, V> Either<Failure, V> executeRequest(final CheckedFunction0<T> action,
+                                                     final Function<T, V> onSuccess,
+                                                     final Tuple2<String, String> failureInfo) {
+        return Try.of(action)
+            .toEither()
+            .map(onSuccess)
+            //1. contains the code of the error and 2 contains the reason why could it failed
+            .mapLeft(throwable -> Failure.of(throwable, PREFIX_FAILURE_CODE.formatted(failureInfo._1), failureInfo._2));
     }
 
-    public Either<List<String>, GistComment> addCommentToGist(final String gistId, final String comment) {
-        return Try.ofCallable(() -> gistService.createComment(gistId, comment))
-            .onFailure(throwable -> log.error("Can not create a new comment for gist {}", gistId, throwable))
-            .map(GIST_MAPPER::githubToGistComment)
-            .map(gistComment -> Either.<List<String>, GistComment>right(gistComment))
-            .getOrElseGet(throwable -> Either.left(List.of(throwable.getMessage())));
-    }
-
-    public Either<String, Void> deleteCommentFromGist(final long gistCommentId) {
-        return Try.run(() -> gistService.deleteComment(gistCommentId))
-            .onFailure(throwable -> log.error("Can not delete for user {}", gistCommentId, throwable))
-            .toEither(String.format("Can not delete for user %s", gistCommentId));
-    }
-
-    public List<GistComment> topGistComments(final String gistId, final int count) {
-        return Try.ofCallable(() -> gistService.getComments(gistId))
-            .map(comments -> Stream.ofAll(comments).take(count)
-                .sorted(Comparator.comparing(Comment::getCreatedAt).reversed())
-                .map(GIST_MAPPER::githubToGistComment)
-                .collect(Collectors.toList()))
-            .onFailure(throwable -> log.error("Can not get the comments from {} gist", gistId, throwable))
-            .getOrElse(List.of());
+    private <T, V> Either<Failure, List<V>> executeRequestForList(final CheckedFunction0<List<T>> action,
+                                                                  final Function<List<T>, List<V>> onSuccess,
+                                                                  final Tuple2<String, String> failureInfo) {
+        return Try.of(action).toEither()
+            .map(onSuccess)
+            //1. contains the code of the error and 2 contains the reason why could it failed
+            .mapLeft(throwable -> Failure.of(throwable, PREFIX_FAILURE_CODE.formatted(failureInfo._1), failureInfo._2));
     }
 
 }
